--- a/c-food-main/app/src/main/res/layout/rv_category_item.xml
+++ b/c-food-main/app/src/main/res/layout/rv_category_item.xml
@@ -5,33 +5,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     app:cardCornerRadius="@dimen/browser_actions_context_menu_min_padding">
+
     <LinearLayout
-        android:padding="10dp"
-        android:weightSum="10"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="200dp"
+        android:padding="10dp"
+        android:alpha="0.5"
+        android:weightSum="10">
+
         <ImageView
             android:id="@+id/category_image"
-            android:layout_width="128dp"
-            android:layout_height="128dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/com_tam"/>
-
-        <LinearLayout
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:orientation="vertical">
+            android:src="@drawable/com_tam"
+            android:textAlignment="center" />
 
-            <TextView
-                android:id="@+id/category_name_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/cherry_swash_bold"
-                android:text="Category name" />
-
-
-        </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/category_name_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+    android:layout_marginTop="90dp"
+        android:fontFamily="@font/cherry_swash_bold"
+        android:text="Category name"
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="20dp" />
 </androidx.cardview.widget.CardView>
