--- a/c-food-main/app/src/main/res/layout/activity_feed_back.xml
+++ b/c-food-main/app/src/main/res/layout/activity_feed_back.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f7f7ee"
+    android:background="#cff6cf"
     android:padding="10dp"
     tools:context=".activity.FeedbackActivity">
 
@@ -53,8 +53,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <ImageView
                 android:id="@+id/Displayimage_view"
@@ -67,23 +67,23 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:paddingTop="30dp">
 
                 <Button
                     android:id="@+id/camera_Btn"
-                    android:layout_width="180dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="100dp"
                     android:background="#d4f3ef"
-                    android:fontFamily="@font/baloo"
-                    android:text="Camera" />
+                    android:fontFamily="@font/baloo" />
 
                 <Button
                     android:id="@+id/gallery_Btn"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/camera_Btn"
-                    android:background="#d4f3ef"
+                    android:background="#a6dcef"
                     android:fontFamily="@font/baloo"
                     android:text="Gallery" />
             </RelativeLayout>
@@ -92,56 +92,51 @@
         </LinearLayout>
 
 
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:orientation="vertical">
-
-        <com.google.android.material.textfield.TextInputLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="Title"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
 
-            >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/title"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="Content"
+                android:hint="Title"
 
-            >
+                >
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/content"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-        <Button
-            android:id="@+id/changePass_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#d4f3ef"
-            android:fontFamily="@font/bungee"
-            android:text="Send FeedBack" />
-    </LinearLayout>
+                android:hint="Content"
 
+                >
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+            </com.google.android.material.textfield.TextInputLayout>
 
+            <Button
+                android:id="@+id/changePass_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#d4f3ef"
+                android:fontFamily="@font/bungee"
+                android:text="Send FeedBack" />
+        </LinearLayout>
 
 
     </LinearLayout>
