--- a/c-food-main/app/src/main/res/layout/activity_forget_password.xml
+++ b/c-food-main/app/src/main/res/layout/activity_forget_password.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d8ebb5"
     android:padding="30dp"
-    android:background="#f4f6ff"
     tools:context=".activity.ForgetPasswordActivity">
 
     <LinearLayout
@@ -16,16 +16,15 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_return"
-            android:padding="5dp"/>
+            android:padding="5dp"
+            android:src="@drawable/icon_return" />
 
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:src="@drawable/icon_forgetpassword"
-            >
+            android:src="@drawable/icon_forgetpassword">
 
         </ImageView>
 
@@ -33,14 +32,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/bungee"
+            android:gravity="center"
             android:text="Forget Password"
             android:textAlignment="center"
-            android:gravity="center"
-            android:layout_gravity="center"
             android:textAllCaps="true"
             android:textColor="#000"
-            android:layout_marginTop="10dp"
             android:textSize="30sp" />
 
         <TextView
@@ -72,10 +71,10 @@
 
         <Button
             android:id="@+id/check_username_btn"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#d4f3ef"
+            android:layout_marginTop="20dp"
+            android:background="#98d6ea"
             android:fontFamily="@font/bungee"
             android:text="Next" />
     </LinearLayout>
