--- a/c-food-main/app/src/main/res/layout/activity_categories.xml
+++ b/c-food-main/app/src/main/res/layout/activity_categories.xml
@@ -6,17 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".activity.CategoriesActivity"
     android:orientation="vertical">
+
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="Food categories"/>
+        android:background="#d4f3ef"
+        app:title="Food categories" />
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#f3e1e1">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_food_categories"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
