--- a/c-food-main/app/src/main/res/layout/activity_confirm_code.xml
+++ b/c-food-main/app/src/main/res/layout/activity_confirm_code.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".activity.ConfirmCodeActivity"
-    android:background="#fff"
-    android:padding="20dp">
+    android:background="#d8ebb5"
+    android:orientation="vertical"
+    android:padding="20dp"
+    tools:context=".activity.ConfirmCodeActivity">
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="150dp"
-        android:transitionName="logo_image"
         android:layout_height="150dp"
+        android:transitionName="logo_image"
         app:srcCompat="@drawable/vegetable" />
 
     <TextView
@@ -22,16 +22,16 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/bungee"
         android:text="Welcome!"
-        android:transitionName="logo_text"
         android:textColor="#000"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:transitionName="logo_text" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/cherry_swash_bold"
         android:text="Input code OTP here:"
-        android:textSize="18sp"/>
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,29 +41,28 @@
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:hint="OTP"
 
             >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:id="@+id/verifiedCode_editText"
-                />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/confirmCode_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Confirm"
-            android:id="@+id/confirmCode_btn"
-            android:background="#000"
-            android:textColor="#fff"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp"
+            android:background="#000"
+            android:text="Confirm"
+            android:textColor="#fff" />
 
     </LinearLayout>
 
