--- a/c-food-main/app/src/main/res/layout/activity_find_password.xml
+++ b/c-food-main/app/src/main/res/layout/activity_find_password.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ChangePasswordActivity"
-    android:background="#f4f6ff"
-    android:padding="30dp">
+    android:background="#d8ebb5"
+    android:padding="30dp"
+    tools:context=".activity.ChangePasswordActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,25 +16,24 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_return">
-        </ImageView>
+            android:src="@drawable/icon_return"></ImageView>
+
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
-            android:src="@drawable/icon_resetpass">
-        </ImageView>
+            android:src="@drawable/icon_resetpass"></ImageView>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/bungee"
             android:text="New Password"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             android:textColor="#000"
             android:textSize="35sp" />
 
@@ -47,17 +47,15 @@
             android:textSize="18sp" />
 
 
-
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/newpassword"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_toRightOf="@+id/image"
             android:layout_height="wrap_content"
-            android:id="@+id/newpassword"
             android:layout_marginBottom="10dp"
-            app:passwordToggleEnabled="true"
+            android:layout_toRightOf="@+id/image"
             android:hint="OTP"
-            >
+            app:passwordToggleEnabled="true">
 
 
             <com.google.android.material.textfield.TextInputEditText
@@ -65,10 +63,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/icon_security"
-                android:drawablePadding="10dp"
-                />
+                android:drawablePadding="10dp" />
         </com.google.android.material.textfield.TextInputLayout>
-
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -76,9 +72,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            app:passwordToggleEnabled="true"
             android:hint="New Password"
-            >
+            app:passwordToggleEnabled="true">
 
 
             <com.google.android.material.textfield.TextInputEditText
@@ -87,16 +82,15 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/icon_security"
                 android:drawablePadding="10dp"
-                android:inputType="textPassword"
-                />
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/confirm_update_password_btn"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#d4f3ef"
+            android:layout_marginTop="20dp"
+            android:background="#98d6ea"
             android:fontFamily="@font/bungee"
             android:text="Confirm" />
     </LinearLayout>
