--- a/c-food-main/app/src/main/res/layout/activity_login.xml
+++ b/c-food-main/app/src/main/res/layout/activity_login.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.LoginActivity"
     android:orientation="vertical"
-    android:background="#fff"
-    android:padding="20dp">
+    android:padding="20dp"
+    tools:context=".activity.LoginActivity">
 
     <ImageView
         android:id="@+id/logo_image"
         android:layout_width="150dp"
-        android:transitionName="logo_image"
         android:layout_height="150dp"
+        android:transitionName="logo_image"
         app:srcCompat="@drawable/vegetable" />
 
     <TextView
@@ -23,17 +22,17 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/bungee"
         android:text="Hello there, Welcome Back"
-        android:transitionName="logo_text"
         android:textColor="#000"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:transitionName="logo_text" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/cherry_swash_bold"
         android:text="Sign In to continue"
-        android:transitionName="logo_desc"
-        android:textSize="18sp">
+        android:textSize="18sp"
+        android:transitionName="logo_desc">
 
     </TextView>
 
@@ -45,70 +44,69 @@
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:hint="Username"
 
-            android:transitionName="username_tran"
-            >
+            android:transitionName="username_tran">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/username_editTextInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                />
+                android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/email_editText"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Password"
             android:transitionName="password_tran"
-            app:passwordToggleEnabled="true"
-            >
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_editTextInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-               />
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/forgot_password_button"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="#00000000"
-            android:text="Forget password?"
             android:layout_gravity="right"
+            android:layout_margin="5dp"
+            android:background="#00000000"
             android:elevation="0dp"
-            android:layout_margin="5dp"/>
+            android:text="Forget password?" />
 
         <Button
             android:id="@+id/login_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign In"
-            android:transitionName="button_tran"
-            android:background="#000"
-            android:textColor="#fff"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp"
+            android:background="#98d6ea"
+            android:text="Sign In"
+            android:textColor="#000"
+            android:transitionName="button_tran" />
+
         <Button
             android:id="@+id/signup_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#00000000"
-            android:text="New User? SIGN UP"
             android:layout_gravity="right"
-            android:elevation="0dp"
             android:layout_margin="5dp"
-            android:transitionName="button_signup_tran"
+            android:background="#00000000"
+            android:elevation="0dp"
             android:fontFamily="@font/antic"
-            android:textColor="#000"/>
+            android:text="New User? SIGN UP"
+            android:textColor="#000"
+            android:transitionName="button_signup_tran" />
     </LinearLayout>
 
 
