--- a/c-food-main/app/src/main/res/layout/activity_signup.xml
+++ b/c-food-main/app/src/main/res/layout/activity_signup.xml
@@ -110,10 +110,9 @@
         android:id="@+id/signUp_btn2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#000"
+        android:background="#98d6ea"
         android:text="GO"
-        android:textColor="#fff"
-      />
+        android:textColor="#000" />
 
     <Button
         android:id="@+id/loginback_btn"
