--- a/c-food-main/app/src/main/res/layout/rv_fav_food_item.xml
+++ b/c-food-main/app/src/main/res/layout/rv_fav_food_item.xml
@@ -5,17 +5,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     app:cardCornerRadius="@dimen/browser_actions_context_menu_min_padding">
+
     <LinearLayout
-        android:padding="10dp"
-        android:weightSum="10"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#f8e1f4"
+        android:padding="10dp"
+        android:weightSum="10">
+
         <ImageView
             android:id="@+id/fav_food_image"
             android:layout_width="128dp"
             android:layout_height="128dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/com_tam"/>
+            android:src="@drawable/com_tam" />
 
         <LinearLayout
             android:layout_width="150dp"
