--- a/c-food-main/app/src/main/res/layout/activity_feed_back.xml
+++ b/c-food-main/app/src/main/res/layout/activity_feed_back.xml
@@ -130,7 +130,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/changePass_btn"
+                android:id="@+id/send_feedback_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#d4f3ef"
