fix backgroud vs button

--- a/c-food-main/app/src/main/res/layout/rv_fav_food_item.xml
+++ b/c-food-main/app/src/main/res/layout/rv_fav_food_item.xml
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:background="@drawable/custom_button"
+            android:background="#e84a5f"
             android:fontFamily="@font/bungee"
             android:text="remove"
             android:textAllCaps="false"
