--- a/c-food-main/app/src/main/res/layout/activity_favorite_food.xml
+++ b/c-food-main/app/src/main/res/layout/activity_favorite_food.xml
@@ -20,8 +20,7 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#f6def6">
+            android:layout_height="match_parent">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_fav_food_list"
